tests/snapshots/file@while@var_in_body.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'var': Expect expression.\nwhile (true) var foo;\n"
input_file: crafting_interpreters_test_files/while/var_in_body.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this, super', found 'var'
   ╭─[2:14]
 1 │ // [line 2] Error at 'var': Expect expression.
 2 │ while (true) var foo;
   ·              ─┬─
   ·               ╰── here
   ╰────
